tippos + faster horses in intro

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 <li><a href="#prepare-the-research-session">Prepare the research session</a><ul>
 <li><a href="#questiontopics">What do you want to find out?</a></li>
 <li><a href="#write-a-cheat-sheet">Write a cheat sheet</a></li>
-<li><a href="#equipment">Equipment</a><ul>
-<li><a href="#camera">Camera</a></li>
-</ul></li>
+<li><a href="#equipment">Equipment</a></li>
 </ul></li>
 <li><a href="#data-gathering">Data Gathering</a><ul>
 <li><a href="#inform-and-get-consent">Inform and get Consent</a></li>
@@ -154,7 +152,7 @@
 <h2 id="why-should-i-use-the-methods-described-in-this-book"><a href="#why-should-i-use-the-methods-described-in-this-book">Why should I use the methods described in this book?</a></h2>
 <p>User Need Research helps us to find out is how and why users do their work. This is different from usability testing. Testing is great for finding out about users problems, bugs and possibilities to tweak an existing product. However, usability tests tell you few about the why and how if users work. You may give them a task to accomplish in the usability testing – but are these the tasks they are doing in their actual work? And if yes – why is this task done anyway?</p>
 <p>Thus we need methods that may inform us about things we don't know about yet. Methods that allow us to explore the actual actions and the reasons behind them – because even if you might be puzzled about some things you observe they usually make perfect sense for the users.</p>
-<p>I think the usefulness of User Need Research is best understood by examples.</p>
+<p>This is not simply done by asking users what they want. Doing this, you usually get to know that people want a better version of what they already have. For design it is more useful to know the needs behind this wishes. Henry Ford allegedly said »If I had asked people what they wanted, they would have said faster horses«. Instead of faster horses, Ford sold a product that satisfied an underlying motivation – Getting quickly from A to B – instead of the specific wish.</p>
 <h2 id="example-for-user-need-research-e-learning"><a href="#example-for-user-need-research-e-learning">Example for User Need Research: e-Learning</a></h2>
 <p>Some time ago I did research on the use of computers and web for learning purposes. At the institution, a web based learning software (an LMS, Learning management system) was already existing. I assumed that students would probably use it for collaboration, professors for preparing interactive quizzes for the students and for enabling them to review material. But we did not want to rely on our guesses, so we did research on how and why students and teaching staff used computers and web for learning (note that we deliberately did research on the use web and computers for learning, not for using the specific system that was existing).</p>
 <p>We recruited students and teaching staff from various courses and did interviews with them. The gathered data was than analyzed to find out how and why computers and internet were used for learning.</p>
@@ -334,23 +332,10 @@
 <li>a digital camera</li>
 </ul></li>
 </ul>
-<!-- 
-### Audio Recording  
-
-
-
-If you audio-record you interview you have a backup in case you could not keep
-up with taking notes and to be able to fully concentrate on the
-participant if needed. To do an audio recording, either use your smartphone and an audio 
-recording app or use an audio recorder. Test, if the audio on the recording 
-is still loud and clear enough if you have an arm’s length between you and the device. 
-Charge the batteries fully so you don’t run out of battery in the midst of research. -->
-
-<h3 id="camera"><a href="#camera">Camera</a></h3>
-<p>A camera is not a must but can be useful, especially if your research involves much participant observation or if you don’t feel confident about your sketching skills. --&gt;</p>
 <h1 id="data-gathering"><a href="#data-gathering">Data Gathering</a></h1>
 <p>In this chapter we will learn how to gather data to get to know about the activities, motivations and problems of our research participants.</p>
-<p>Contrary to a common misconception of user need research, our inquiry will not be (directly) about future ideas and design – we are will not ask »do you think that a [gadget] would help you?«. yes, you <em>could</em> ask whether a particular thing would be a great to have in the future. But then you<br />would have to ask again for the next idea you have. Furthermore, it is very hard to reliably guess if something would be a great thing to have in the future. Instead of dealing with ideas directly we will find out about the how and why of our participant’s activities and thus set a reliable foundation for our designs.</p>
+<p>Contrary to a common misconception of user need research, our inquiry will not be (directly) about future ideas and design – we are will not ask »do you think that a [gadget] would help you?«.</p>
+<p>Yes, you <em>could</em> ask whether a particular thing would be a great to have in the future. But then you would have to ask again for the next idea you have. Furthermore, it is very hard to reliably guess if something would be a great thing to have in the future. Instead of dealing with ideas directly we will find out about the how and why of our participant’s activities and thus set a reliable foundation for our designs.</p>
 <p>Think of your participants as competent in what they do: they are experts in their fields and in their daily work</p>
 <p>Emphazing the expertise of the participants is contrary to the idea of designers and programmers as people who improve the lives of those who »don’t get it«. Instead of this, we assume that the participants of our research have a reason of doing their work the way they do it. We try to find out these reasons behind their activities.</p>
 <p>Getting to know the »how« and »why« of the users actions will allow us to evaluate our ideas (does it match their ideas of good work?) and to get inspiration for new ideas (how can we support this motivation?)</p>
@@ -435,7 +420,7 @@ conversation: You ask questions, the user answered them. -->
 <p>In this section I demonstrate how you can show that you value the participant’s time and input and make the participant feel comfortable during the research.</p>
 <p>User researchers ask lots of possibly awkward feeling questions and at least in the beginning, a research session could be unusual for some participants. In this section we are going to look at some ways to ensure that the research session will be a pleasant experience.</p>
 <h3 id="start-with-simple-questions"><a href="#start-with-simple-questions">Start with simple questions</a></h3>
-<p>Start simple with some demographical questions – like like: <em>»Lets start with some simple questions about your job«</em>. You could ask <em>»What is your job title«</em> and maybe follow <em>»How do you name your Job when friends ask you what you do?«.</em> As well it might be interesting how experienced the person is: <em>»How long have you been working in your current occupation?«</em> These examples are tied to work related studies – for doing research on university students I tie the questions to their particular context and ask for example how long they have been studying so far.</p>
+<p>Start simple with some demographical questions – like like: <em>»Lets start with some simple questions about your job«</em>. You can ask <em>»What is your job title«</em> and maybe follow <em>»How do you name your Job when friends ask you what you do?«.</em> As well it might be interesting how experienced the person is: <em>»How long have you been working in your current occupation?«</em> These examples are tied to work related studies – for doing research on university students I tie the questions to their particular context and ask for example how long they have been studying so far.</p>
 <p>A very obvious advantage of these questions is that they will help you to get to know some context of the participant’s work. But there is another advantage: Such questions like asking for the job title or years in the job etc. are easy to answer and it is a pretty clear how to answer to them. This gets the participants into the mode of answering questions and opening up towards you. After a brief section with these easy-to-answer questions you can transition into more open questions.</p>
 <h3 id="affirm-that-you-listen"><a href="#affirm-that-you-listen">Affirm that you listen</a></h3>
 <p>You will ask questions aiming for descriptions and longer answers. So you will be listening to the participant most of the time. You probably have some ways to intuitively show that you listen – like nodding with the head or saying »yes« or »mm-mhh«. This is an important way to ensure the participant that his/her information is listened to and valued.</p>
@@ -539,11 +524,11 @@ conversation: You ask questions, the user answered them. -->
 </div>
 <p>Remember that you want to find out what your participant does and why. To correct the participant is not very useful. Use the possibility to further explore the topic without correcting the user <a href="#fn3" class="footnoteRef" id="fnref3"><sup>3</sup></a> .</p>
 <div class="example">
-<p>You could just ask »what's the reason for you doing it this way«, or, if talking about the function itself is really important to you, you could ask »How did you expect to do the color change if there would be such a function?«</p>
+<p>You can just ask »what's the reason for you doing it this way«, or, if talking about the function itself is really important to you, you can ask »How did you expect to do the color change if there would be such a function?«</p>
 </div>
 <p>Similarly, you could be surprised or even annoyed by steps or actions in a workflow of the user which seem outright superfluous.</p>
 <div class="example">
-<p>»When I write a text I write a draft and then send it to my colleague via mail as an attached .doc file. My colleague comments on it and returns the mail to me« You may think that this is rather inefficient. You could be tempted to say »Why don't you paste the text in the mail and comment directly? Or write it live on Etherpad? This would be far quicker!«</p>
+<p>»When I write a text I write a draft and then send it to my colleague via mail as an attached .doc file. My colleague comments on it and returns the mail to me« You may think that this is rather inefficient. You may be tempted to say »Why don't you paste the text in the mail and comment directly? Or write it live on Etherpad? This would be far quicker!«</p>
 </div>
 <p>Remember that nobody does inefficient things by purpose. Assume that the user has a reason. Try to find out what this reason may be.</p>
 <div class="example">
@@ -591,7 +576,7 @@ conversation: You ask questions, the user answered them. -->
 <p>»What is good about the resulting design? « [Answer]</p>
 </div>
 <h2 id="dont-make-the-user-the-designer"><a href="#dont-make-the-user-the-designer">Don't make the user the designer</a></h2>
-<p>It is tempting to skip investigating the »how« and »why« of the participant’s work and to ask the participant instead directly<br />how the final product should be like</p>
+<p>It is tempting to skip investigating the »how« and »why« of the participant’s work and to ask the participant instead directly<br />how the final product should be like.</p>
 <div class="example">
 <p>Which function do you need for aligning objects?</p>
 </div>
@@ -1041,7 +1026,7 @@ Memory fades quickly
 <li>a big wall (2m*3m minimum – which is why the wall is usually the showstopper ).</li>
 </ul>
 <p>But why should you want to use an analog analysis if it needs all these resources? Partly, the decision can be based on preferences: Some people like that they can move around the notes by hand and can get an overview of their data by just stepping back and glancing over it.</p>
-<p>If you work with peers on your analysis you have some advantages when using the analogue pen and paper approach: you can easily discuss your ideas with other and will get new ideas how to structure the data. You could as well invite your boss to take a look and be part of the team, at least for some time. This type of on-site, collaborative, analysis is best done analogue. It is easy to move notes around, and you can refer by pointing to data or just carry it over to someone and ask for an interpretation. Using digital tools it is not that easy and direct– despite of all the great digital tools we have nowadays.</p>
+<p>If you work with peers on your analysis you have some advantages when using the analogue pen and paper approach: you can easily discuss your ideas with other and will get new ideas how to structure the data. You can as well invite your boss to take a look and be part of the team, at least for some time. This type of on-site, collaborative, analysis is best done analogue. It is easy to move notes around, and you can refer by pointing to data or just carry it over to someone and ask for an interpretation. Using digital tools it is not that easy and direct– despite of all the great digital tools we have nowadays.</p>
 <h3 id="how-to"><a href="#how-to">How-To</a></h3>
 <h4 id="analysis-on-the-computer"><a href="#analysis-on-the-computer">Analysis on the computer</a></h4>
 <p>For analysis on your computer I suggest the following steps for preparing your analysis:</p>
@@ -1063,9 +1048,9 @@ Memory fades quickly
 <li>copy/paste all your data (line by line) from the transcript into the cells</li>
 <li>print it</li>
 <li>cut out each table cell (=piece of data)</li>
-<li>cover the wall with the paper from paper rolls (thus you can remove the analysis, roll up the paper and archive it and you could remove it from the wall temporarily)</li>
+<li>cover the wall with the paper from paper rolls (thus you can remove the analysis, roll up the paper and archive it and you can remove it from the wall temporarily)</li>
 </ol>
-<p><strong>Creating groups</strong>: during analysis you will stick your printed notes on the widths of paper using removable tape, crepe tape or spray glue – something sticky but non-permanent, so you can move the notes around in order to gradually improve the structure.<br /> <strong>Group titles/Themes</strong>: Write your group titles on notes of determined colors, which are different from the color of the actual data points. If you print your data points on white paper you could use yellow sticky notes for group titles and pink ones for titles of a group of groups.</p>
+<p><strong>Creating groups</strong>: during analysis you will stick your printed notes on the widths of paper using removable tape, crepe tape or spray glue – something sticky but non-permanent, so you can move the notes around in order to gradually improve the structure.<br /> <strong>Group titles/Themes</strong>: Write your group titles on notes of determined colors, which are different from the color of the actual data points. If you print your data points on white paper you can use yellow sticky notes for group titles and pink ones for titles of a group of groups.</p>
 <h2 id="firstStructure"><a href="#firstStructure">Develop a first Structure</a></h2>
 <p>After you annotated your data you can start to structure the it. Structuring the data means suggesting themes behind the data, naming these themes and decide which data falls under which theme.</p>
 <p>You don't use all your data yet. Start with what you find useful when skimming through it or use just the data of two participants for now. The goal is to set up some preliminary structure, like a scaffold.</p>
