Corrections. Thanks for proofreading and the suggestions, Ming!

--- a/index.html
+++ b/index.html
@@ -146,45 +146,45 @@
 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">A Beginner’s Guide to Finding User Needs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://jdittrich.github.io/userNeedResearchBook/" property="cc:attributionName" rel="cc:attributionURL">Jan Dittrich</a> licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 <p>Libraries used for this webpage have their own licenses and are <em>not</em> covered by the Creative Commons license above.</p>
 <h1 id="about-this-text"><a href="#about-this-text">About this text</a></h1>
-<p>This book is written for all those who want to design products according to the needs of human beings. This text teaches you how to find potential users and how to find out about their activities, motivations and problems. I demonstrate how to analyze the gathered data in a way that makes it usable and useful for your design process.</p>
+<p>This book is written for all those who want to design products according to the needs of people. This text teaches you how to find potential users and how to find out about their activities, motivations and problems. I demonstrate how to analyze the gathered data in a way that makes it usable and useful for your design process.</p>
 <p>To have knowledge about the »how« and »why« of the user’s work allows you to create innovative products that meet the users’ needs. As well, you can utilize this knowledge to improve existing products.</p>
 <p>The user needs research methods in this book are taught in a descriptive way and by using tools that are readily available to you. This allows quick application of the learned methods. I hope you can imagine yourself applying the described methods when reading.</p>
 <p>If you find spelling mistakes or have other suggestions for fixes you can submit a <a href="https://help.github.com/articles/using-pull-requests/">pull request</a> at the <a href="https://github.com/jdittrich/userNeedResearchBook">book’s github repository</a>.</p>
 <h1 id="introduction"><a href="#introduction">Introduction</a></h1>
 <h2 id="why-should-i-use-the-methods-described-in-this-book"><a href="#why-should-i-use-the-methods-described-in-this-book">Why should I use the methods described in this book?</a></h2>
-<p>User Need Research helps us to find out is how and why users do their work. This is different from usability testing. Testing is great for finding out about users problems, bugs and possibilities to tweak an existing product. However, usability tests tell you few about the why and how if users work. You may give them a task to accomplish in the usability testing – but are these the tasks they are doing in their actual work? And if so – why is this task done anyway?</p>
-<p>Thus you need methods that may inform you about things you don’t know about yet. These are methods which allow us to explore the actual actions and the reasons behind them – because even if you might be puzzled about some things you observe they usually make perfect sense for the users.</p>
-<p>This is not simply done by asking users what they want. Doing this, you usually get to know that people want a better version of what they already have. For design it is more useful to know the needs behind this wishes. Henry Ford allegedly said »If I had asked people what they wanted, they would have said faster horses«. Instead of faster horses, Ford sold a product that satisfied an underlying motivation – getting quickly from A to B – instead of the specific wish.</p>
+<p>User Need Research helps us to find out is how and why users do their work. This is different from usability testing. Testing is great for finding out about users’ problems, existing bugs and the possibilities to tweak an existing product. However, usability tests tell you little about the »why« and »how« of users’ work. In usability testing you may give the user a task to accomplish – but are these the tasks they are doing in their actual work? And if so – why is this task being done anyway?</p>
+<p>Thus you need methods that inform you about things you don’t know about yet. These are methods which allow us to explore the actual actions and the reasons behind them – because even if you might be puzzled about some things you observe they usually make perfect sense for the users.</p>
+<p>Finding out about users’ needs is not done by just asking users what they want, because in this case you are usually told that people want a better version of what they already have. For design it is more useful to know the <em>needs</em> behind these wishes. Henry Ford allegedly said »If I had asked people what they wanted, they would have said faster horses«. Instead of faster horses, Ford sold a product that satisfied an underlying motivation – getting quickly from A to B – instead of the specific wish.</p>
 <h2 id="example-for-user-need-research-e-learning"><a href="#example-for-user-need-research-e-learning">Example for User Need Research: e-Learning</a></h2>
 <p>Some time ago I did research on the use of computers and web for learning purposes. A web based learning software (also called »LMS«, Learning management system)</p>
-<p>At the institution, a web based learning software (an LMS, Learning management system) was already existing. We assumed that students would probably use it for collaboration, professors for preparing interactive quizzes for the students and for enabling them to review material. But we did not want to rely on our guesses, so we did research on how and why students and teaching staff used computers and web for learning (note that we deliberately did research on the use web and computers for learning, not for using the specific system that was existing).</p>
-<p>We recruited students and teaching staff from various courses and did interviews with them. The gathered data was then analyzed to find out how and why computers and internet were used for learning.</p>
-<p>We found out that not quizzes, workgroups and videos were the tools of trade, but file exchange. The following uses of files were typical:</p>
+<p>At the institution, a web based learning software (an LMS, Learning management system) was already in place. We assumed that students would probably use it for collaboration, professors for preparing interactive quizzes for the students and for enabling them to review material. But we did not want to rely on our guesses, so we did research on how and why students and teaching staff used computers and the web for learning (note that we deliberately did research on the use web and computers for learning, instead of focussing just on the learning software itself).</p>
+<p>We recruited students and teaching staff from various courses and interviewed with them. The gathered data was<br />analyzed to find out how and why computers and the internet were used for learning.</p>
+<p>We discovered that quizzes, workgroups and videos were not so important. We found out that the most important aspect of the system was exchanging files. The following uses of files were typical:</p>
 <ol type="1">
-<li><p>slides (=learning material) send by the professors or their assistants</p></li>
-<li><p>Texts (=homework) the students send to the professors or their assistants.</p></li>
-<li><p>Project work of student group in the specific file formats (if a group worked on images it might be Photoshop® files etc.)</p></li>
+<li><p>Slides (=learning material) sent by the professors or their assistants</p></li>
+<li><p>Texts (=homework) the students sent to the professors or their assistants.</p></li>
+<li><p>Project work of a student group in the specific file formats (if a group worked on images it might be Photoshop® files etc.)</p></li>
 <li><p>Exercise material of students like old exam questions for practice.</p></li>
 </ol>
-<p>In addition, students and teaching staff exchanges messages via mail; among students, email and Facebook® Messages were rather popular, too.</p>
-<p>Why did students and teaching staff alike use files and messages instead of specialized learning solutions?</p>
-<p>All these methods we saw used skills teaching staff and students already had: Creating files and exchanging them and writing messages So a major need was to get material to students and receive material from them with the least effort and the least demand for learning new skills. Same for the students: They needed to do their projects and homework as efficiently as possible and they too did rely on mail and on services like Dropbox® to do project work together or share old exam questions for practicing.</p>
+<p>In addition, students and teaching staff exchanged messages via mail; among students, email and Facebook® Messages were popular, too.</p>
+<p>Why did students and teaching staff alike use files and messages instead of the specialized learning solutions?</p>
+<p>All these methods we saw used skills the teaching staff and students already had: Creating files and exchanging them and writing messages So a major need was to get material to students and receive material from them with the least effort and the least demand for learning new skills. It was the same for the students: They needed to do their projects and homework as efficiently as possible and they relied on mail and services like Dropbox® to do project work together or to share old exam questions for practicing.</p>
 <p>This led us to several ideas which guided the project in the following phases:</p>
 <ul>
 <li>Consider file up- and download as a core tool</li>
 <li>Carefully test the solution to make it at least as usable and useful as existing ways of file exchange</li>
-<li>To increase adoption to the new system ensure that people know about the feasibility for their standard-usecases (Files!) and before showing the additional possibilities.</li>
+<li>To increase adoption to the new system, ensure that people know about the feasibility for their standard-usecases (Files!) before showing the additional possibilities.</li>
 <li>In general: Keep in mind that change is hard</li>
 </ul>
-<p>Even tough the study was not too big and the results did not uncover some totally unexpected perspective on our project. Nevertheless, it was worth the effort. Without the research we would have put lots of money into solving problems that were not even existing or to dismiss needs which that are crucial for our users.</p>
+<p>Even though the study was not too big and the results did not uncover some totally unexpected perspective on our project, it was completely worth the effort. We did not need to put lots of money into solving problems that did not even exist or remove functions that were critical for our users.</p>
 <h2 id="this-texts-structure"><a href="#this-texts-structure">This text’s structure</a></h2>
 <p>I will show you the process of researching the user’s needs in the following chapters of this book. The book is organized in the following sections:</p>
 <ol type="1">
 <li>Finding Participants for your studies</li>
 <li>Preparing your research session</li>
 <li>Gather data by asking questions and observation</li>
-<li>analyzing the gathered data</li>
-<li>reporting your results</li>
+<li>Analyzing the gathered data</li>
+<li>Reporting your results</li>
 </ol>
 <p>In each chapter I will give several examples. The examples have their own formatting, it looks like this:</p>
 <div class="example">
@@ -875,7 +875,7 @@ Memory fades quickly
 </div>
 <h2 id="create-meaningful-groups"><a href="#create-meaningful-groups">Create meaningful groups</a></h2>
 <p>I already talked about grouping data by shared themes. The question is: What is a meaningful theme?</p>
-<p>One method to group data and derive a theme would be going through the data and see which utterances and observations mention the same thing or the same assessment. Thus, all notes mentioning »color« would belong to one theme and get the headline »Color«; all notes mentioning »good« belong to one theme and get the headline »good things«.</p>
+<p>One method to group data and to derive a theme would be going through the data and see which utterances and observations mention the same thing or the same assessment. Thus, all notes mentioning »color« would belong to one theme and get the headline »Color«; all notes mentioning »good« belong to one theme and get the headline »good things«.</p>
 <div class="example">
 <p>Let’s say we gathered this data (among others) in research on Do-It-Yourself-Work (DIY)</p>
 <ul>
@@ -893,8 +893,8 @@ Memory fades quickly
 </ul></li>
 </ul>
 </div>
-<p>Organizing the data by this »same things mentioned«-method would help us to find data concerned with a specific thing or assessment: If we want see everything that concerned furniture we can go through the data in the »furniture« group; If we would like to know what people liked we could look it up in a group titled »good«.</p>
-<p>However, the themes have no meaning on its own when organizing using the »same things mentioned«-method. You still need to go through the data points to find out what people did with their furniture and what they think of as »good«. The themes are just labels for the content.</p>
+<p>Organizing the data by this »same things mentioned«-method would help us find data concerned with a specific thing or assessment: If we want see everything that concerned furniture we can go through the data in the »furniture« group; If we would like to know what people liked we could look it up in a group titled »good«.</p>
+<p>However, the themes have no meaning on its own when organizing using the »same things mentioned«-method. Additionally if it was already clear before the research that furniture was connected to DIY work, then summarising to say &quot;there is furniture&quot; doesn't tell us anything new. Therefore, you still need to go through the data points to find out what people did with their furniture and what they think of as »good«. The themes are just labels for the content.</p>
 <p>Imagine we would not create the themes by looking for same things being mentioned but by the insights we drew from the data in the group by focusing on the meaning of activities, problems and goals for the participants.</p>
 <p>If we take the data about DIY again this could look like this:</p>
 <div class="example">
@@ -914,10 +914,10 @@ Memory fades quickly
 <p>If we organize data by the insights about the participants and summarize the insight in the group’s title (the theme), this title is useful on its own: It is not just for accessing the data, it is an empirically based principle we can follow when we design.</p>
 <p>If you design, let’s say, for a DIY-Online community, an insight like »DIY gives as sense of ownership« may inspire the implementation of a function which allows people to share their designs and customizations. The insight that sometimes DIY is just about fixing things may lead to the provision of a wiki for collecting best practices for doing common repairs and maintenance.</p>
 <p>If you have a new idea you can ask yourself »Does this idea follow what is stated in the group titles? Does it violate it them?«. You may ask yourself »With which design could I realize this principle?«. Since the insights are based on our data, they will express the actual needs of your users and not some (potentially stereotypical) assumptions.</p>
-<p>Grouping your data based on insights about your participants provides great benefits. But it can be hard and may be not possible for all your data. Creating groups using the same-things-mentioned methods is still a useful method and these groups may still evolve. Usually I have quite some »same-things-mentioned«-groups in the beginning and far fewer at the end – but still my analysis will be a mixture of both styles.</p>
+<p>Grouping your data based on insights about your participants provides great benefits. But it can be hard and may be not possible for all your data. Creating groups using the same-things-mentioned methods is still a useful method and these groups may still evolve. Usually I have some »same-things-mentioned«-groups in the beginning and far fewer at the end – but my analysis will be a mixture of both styles.</p>
 <div class="example">
-<p>Understanding why organizing data based on insights is an important point which can be hard to grasp for beginners. I think examples can help in understanding it, thus I want to provide an additional demonstration in the gist of the above mentioned DIY data. Like the DIY data, this example is made up by me to be able to demonstrate the shift from same-things-mentioned to insight-based organization.</p>
-<p>Let’s say we gathered this data (among others) in research with beginners in web programming:</p>
+<p>Understanding why organizing data based on insights is an important point which can be hard to grasp for beginners. Here are is another example:</p>
+<p>Let’s say we gathered this data (amongst others) when researching beginners in web programming:</p>
 <ul>
 <li>To try out stuff in HTML is fun</li>
 <li>I analyze Javascript code to understand patterns</li>
